--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styling/style.css">
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="assets/fonts/material-icon/css/material-design-iconic-font.min.css">
     <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
@@ -34,7 +34,7 @@
                                 <input type="password" name="pass" id="pass" placeholder="Password" />
                             </div>
                             <div class="form-group">
-                                <label for="re-pass"><i class="fa-regular fa-lock"></i></i></label>
+                                <label for="re-pass"><i class="fa-solid fa-lock"></i></label>
                                 <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
                             </div>
                             <!-- <div class="form-group">
