--- a/index.html
+++ b/index.html
@@ -4,63 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - E-Commerce</title>
+    <!-- Bootstrap CSS first -->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS last to override Bootstrap if needed -->
     <link rel="stylesheet" href="styling/style.css">
-    <link rel="stylesheet" href="assets/fonts/material-icon/css/material-design-iconic-font.min.css">
-    <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
-<body>
-    <div class="main">
-
-        <!-- Sign up form -->
-        <section class="signup">
-            <div class="container">
-                <div class="signup-content">
-                    <div class="signup-form">
-                        <h2 class="form-title">Sign up</h2>
-                        <form method="POST" class="register-form" id="register-form">
-                            <div class="form-group">
-                                <label for="name"><i class="fa-solid fa-user"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name" />
-                            </div>
-                            <div class="form-group">
-                                <label for="email"><i class="fa-solid fa-envelope"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email" />
-                            </div>
-                            <div class="form-group">
-                                <label for="pass"><i class="fa-solid fa-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="Password" />
-                            </div>
-                            <div class="form-group">
-                                <label for="re-pass"><i class="fa-solid fa-lock"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
-                            </div>
-                            <!-- <div class="form-group">
-                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all
-                                    statements in <a href="#" class="term-service">Terms of service</a></label>
-                            </div> -->
-                            <div class="form-group form-button">
-                                    <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
-                                    <input type="button" name="signin" id="signin-mobile" class="form-submit signin-mobile-btn" value="Sign In" onclick="window.location.href='login.html'" />
-                            </div>
-                        </form>
+<body class="bg-light">
+    <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100 p-0">
+        <div class="card signup-card shadow-lg w-100 d-flex flex-row p-0" style="max-width: 100vw; min-height: 540px;">
+            <div class="signup-image-col d-none d-lg-flex align-items-center justify-content-center bg-primary bg-gradient" style="width: 40%; border-top-left-radius: 2rem; border-bottom-left-radius: 2rem;">
+                <img src="assets/images/signup-image.jpg" alt="Sign Up" class="img-fluid" style="max-width: 80%; max-height: 320px; border-radius: 1.5rem; box-shadow: 0 4px 24px 0 rgba(99,102,241,0.12); background: #f1f5f9;">
+            </div>
+            <div class="signup-form-col flex-grow-1 d-flex align-items-center justify-content-center p-4 p-md-5">
+                <div class="w-100" style="max-width: 400px;">
+                    <div class="text-center mb-4">
+                        <h2 class="fw-bold">Create Account</h2>
+                        <p class="text-muted">Sign up to get started</p>
                     </div>
-                    <div class="signup-image">
-                        <figure><img src="assets/images/signup-image.jpg" alt="sing up image"></figure>
-                        <a href="login.html" class="signup-image-link">I am already member</a>
+                    <form id="signupForm" novalidate>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input type="text" class="form-control" id="name" name="name" required placeholder="Enter your name">
+                            <div class="invalid-feedback">Please enter your name.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="Enter your email">
+                            <div class="invalid-feedback">Please enter a valid email.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" required minlength="6" placeholder="Enter password">
+                            <div class="invalid-feedback">Password must be at least 6 characters.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required placeholder="Confirm password">
+                            <div class="invalid-feedback">Passwords do not match.</div>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+                        <div id="signupMessage" class="mt-3"></div>
+                    </form>
+                    <div class="text-center mt-3">
+                        <span class="text-muted">Already have an account?</span>
+                        <a href="login.html" class="fw-semibold">Login</a>
                     </div>
                 </div>
             </div>
-        </section>
-
+        </div>
     </div>
-    <script src="js/script.js"></script>
-    <script src="jquery/jquery.min.js"></script>
-    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Bootstrap JS first -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Custom JavaScript last -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
