--- a/login.html
+++ b/login.html
@@ -4,64 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styling/style.css">
-    <link rel="stylesheet" href="assets/fonts/material-icon/css/material-design-iconic-font.min.css">
-    <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <title>Login - E-Commerce</title>
+    <!-- Bootstrap CSS first -->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS last to override Bootstrap if needed -->
+    <link rel="stylesheet" href="styling/login.css">
 </head>
 
-<body>
-    <div class="main">
-
-        <!-- Sing in  Form -->
-        <section class="sign-in">
-            <div class="container">
-                <div class="signin-content">
-                    <div class="signin-image">
-                        <figure><img src="assets/images/signin-image.jpg" alt="sing up image"></figure>
-                        <!-- <a href="index.html" class="signup-image-link">Create an account</a> -->
+<body class="bg-light">
+    <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100 p-0">
+        <div class="card login-card shadow-lg w-100 d-flex flex-row p-0" style="max-width: 100vw; min-height: 540px;">
+            <div class="login-image-col d-none d-lg-flex align-items-center justify-content-center bg-primary bg-gradient" style="width: 40%; border-top-left-radius: 2rem; border-bottom-left-radius: 2rem;">
+                <img src="assets/images/signin-image.jpg" alt="Login" class="img-fluid" style="max-width: 80%; max-height: 320px; border-radius: 1.5rem; box-shadow: 0 4px 24px 0 rgba(99,102,241,0.12); background: #f1f5f9;">
+            </div>
+            <div class="login-form-col flex-grow-1 d-flex align-items-center justify-content-center p-4 p-md-5">
+                <div class="w-100" style="max-width: 400px;">
+                    <div class="text-center mb-4">
+                        <h2 class="fw-bold">Welcome Back</h2>
+                        <p class="text-muted">Login to your account</p>
                     </div>
-
-                    <div class="signin-form">
-                        <h2 class="form-title">Sign in</h2>
-                        <form method="POST" class="register-form" id="login-form">
-                            <div class="form-group">
-                                <label for="your_name"><i class="fa-solid fa-user"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name" />
-                            </div>
-                            <div class="form-group">
-                                <label for="your_pass"><i class="fa-solid fa-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password" />
-                            </div>
-                            <div class="form-group">
-                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember
-                                    me</label>
-                            </div>
-                            <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
-                                <input type="button" name="signup" id="signup" class="form-submit" value="Sign up" onclick="window.location.href='index.html'" />
-                            </div>
-                        </form>
-                        <!-- <div class="social-login">
-                            <span class="social-label">Or login with</span>
-                            <ul class="socials">
-                                <li><a href="#"><i class="display-flex-center fa-brands fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="display-flex-center fa-brands fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="display-flex-center fa-brands fa-google"></i></a></li>
-                            </ul>
-                        </div> -->
+                    <form id="loginForm" novalidate>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="Enter your email">
+                            <div class="invalid-feedback">Please enter a valid email.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" required minlength="6" placeholder="Enter password">
+                            <div class="invalid-feedback">Password is required.</div>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        <div id="loginMessage" class="mt-3"></div>
+                    </form>
+                    <div class="text-center mt-3">
+                        <span class="text-muted">Don't have an account?</span>
+                        <a href="index.html" class="fw-semibold">Sign Up</a>
                     </div>
                 </div>
             </div>
-        </section>
-
+        </div>
     </div>
-    <script src="js/script.js"></script>
-    <script src="jquery/jquery.min.js"></script>
-    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Bootstrap JS first -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Custom JavaScript last -->
+    <script src="js/login.js"></script>
+</body>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - E-Commerce</title>
+    <!-- Bootstrap CSS first -->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS last to override Bootstrap if needed -->
+    <link rel="stylesheet" href="styling/style.css">
+</head>
+
+<body>
+    <!-- Bootstrap JS first -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <!-- Custom JavaScript last -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
